--- a/exercicios/ex023/tabela005.html
+++ b/exercicios/ex023/tabela005.html
@@ -4,9 +4,94 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabela</title>
+    <title>Exercicio de Tabela</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        table {
+            width: 500px;
+            border-collapse: collapse;
+        }
+
+        caption {
+            font-size: 1.3em;
+            font-weight: bolder;
+            padding: 8px;
+            background-color: lightgray;
+        }
+
+        th, td {
+            border: 1px solid black;
+            padding: 8px;
+        }
+
+        .destaque{
+            background-color: lime;
+        }
+
+        col.cnome {
+            background-color: aquamarine;
+        }
+
+        col.cgrupo {
+            background-color: teal;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Exercício de Tabela</h1>
+
+    <table>
+        <colgroup>
+            <col class="cnome">
+            <col class="cgrupo" span="2">
+            <col class="cprof">
+        </colgroup>
+        <caption>Cadastro</caption>
+        <tr>
+            <th scope="col">Nome</th>
+            <th scope="col">Sexo</th>
+            <th scope="col">Idade</th>
+            <th scope="col">Profissão</th>
+        </tr>
+        <tr>
+            <td>Dona Maria</td>
+            <td>F</td>
+            <td>62</td>
+            <td>Jornalista</td>
+        </tr>
+        <tr>
+            <td>Marcelo Faria</td>
+            <td>M</td>
+            <td>44</td>
+            <td>Farmaceutico</td>
+        </tr>
+        <tr>
+            <td>Fernando Barcelos</td>
+            <td>M</td>
+            <td>21</td>
+            <td>Programador</td>
+        </tr>
+        <tr>
+            <td>Ana Castela</td>
+            <td>F</td>
+            <td>19</td>
+            <td>Cantora</td>
+        </tr>
+        <tr>
+            <td>Eduardo Pereira</td>
+            <td>M</td>
+            <td>30</td>
+            <td>Jogador</td>
+        </tr>
+        <tr>
+            <td>Hortencia</td>
+            <td>F</td>
+            <td>56</td>
+            <td>Jogadora</td>
+        </tr>
+    </table>
 </body>
 </html>
