--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -29,7 +29,7 @@
 
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ad itaque magni sequi. Ullam quos similique quo, neque quam minima unde. Harum cupiditate voluptatibus, consectetur consequatur cumque ipsum voluptas similique. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos minus error tempora nesciunt doloremque aliquid voluptatum veritatis vel iure deserunt quia, qui aliquam ut consequuntur sed, aut officia at nam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis labore aliquid odit sunt quam voluptatem debitis nam quidem, ab architecto, nisi a fugiat magni laudantium, dicta modi voluptatum nulla? Reprehenderit! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia voluptatum nam placeat doloribus esse, veniam recusandae suscipit. Voluptatibus voluptatum perspiciatis natus praesentium nam, labore qui aliquid aliquam ipsam facilis nihil?</p>
 
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ad itaque magni sequi. Ullam quos similique quo, neque quam minima unde. Harum cupiditate voluptatibus, consectetur consequatur cumque ipsum voluptas similique. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos minus error tempora nesciunt doloremque aliquid voluptatum veritatis vel iure deserunt quia, qui aliquam ut consequuntur sed, aut officia at nam. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p><img src='imagens/palmeirass.png' height='200px'>">
         <p>Infelizmente seu navegador não é compatível!</p>
     </iframe>
 
